crates/plotnik-lib/tests/02-parser/recovery_unexpected/double_quantifier.txt
Q = (a)*+
------------------ DIAGNOSTICS -------------------
error: expected a pattern
 --> query.ptk:1:9
  |
1 | Q = (a)*+
  |         ^
  |
help: try `(node)`, `[a b]`, `{a b}`, `"literal"`, or `_`
